# coronavirus_visualization_and_prediction

./: .gitignore  Coronavirus (COVID-19) Visualization & Prediction.ipynb  Dockerfile  Makefile  README.md  coronavirus-covid-19-visualization-prediction (1).ipynb  coronavirus-covid-19-visualization-prediction.ipynb  docker-compose.yaml  pyproject.toml
src/: coronavirus-covid-19-visualization-prediction.ipynb  coronavirus-covid-19-visualization-prediction.py
