[tool.poetry]
name = "coronavirus-covid-19-visualization-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
attrs = "^21.4.0"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
scikit-learn = "^1.1.2"
python = "^3.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.5"
coverage = "^6.3.2"
black = "^22.8.0"
pylint = "^2.13.8"
pytest = "^7.1.2"
requests = "^2.27.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
